--- a/01_intro.ipynb
+++ b/01_intro.ipynb
@@ -371,7 +371,7 @@
     "print('홍길동은 {}살 입니다.' .format(age))\n",
     "\n",
     "# 3. f-strng 방식 >> 우리가 가장 많이 쓸 방식임\n",
-    "print(f'홍길동은 {age}살 입니다.')    "
+    "print(f'홍길동은 {age}살 입니다.')"
    ]
   },
   {
@@ -990,20 +990,537 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6413099e-dd81-4888-9966-1e01e4444602",
+   "cell_type": "markdown",
+   "id": "f8c8ad68-647f-4554-ab82-73f369a40ef5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 4. 시퀀스 자료형"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "1c48a1af-bbba-4745-a61d-7957e382355f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = []\n",
+    "print(l)\n",
+    "print(type(l))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b9615e23-0802-45c2-9bb8-7e6239a485f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['seoul', 'busan', 'incheon']\n",
+      "seoul\n",
+      "['seoul', 'deogu', 'incheon']\n"
+     ]
+    }
+   ],
+   "source": [
+    "location = ['seoul', 'busan', 'incheon']\n",
+    "print(location) # list 내 모든 데이터 출력\n",
+    "print(location[0]) #파이썬은 0부터 시작하므로, 첫 번째 데이터만 출력\n",
+    "\n",
+    "location[1] = 'deogu' # 다른 데이터로 교체\n",
+    "print(location)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c48a1af-bbba-4745-a61d-7957e382355f",
+   "id": "3015666b-6def-4f2e-bb94-daeb971d7830",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## 4.2 tuple(튜플)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "dab21a29-3ce1-4ac9-a8bd-bc443ebf647b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('seoul', 'busan', 'incheon')\n",
+      "seoul\n"
+     ]
+    }
+   ],
+   "source": [
+    "location = ('seoul', 'busan', 'incheon')\n",
+    "print(location)\n",
+    "print(location[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "9123b0fe-ede4-4543-bb38-5e82dd7f5e91",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'tuple' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mlocation\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m부산\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(location[\u001b[38;5;241m0\u001b[39m])\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "location[2] = '부산'\n",
+    "print(location[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35d7c288-17e1-493d-bc51-0495cdff73f9",
+   "metadata": {},
+   "source": [
+    "## 4.3 range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "bdce557b-3830-4217-9448-581c1a747f84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(0, 45)\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44]\n",
+      "range(1, 46)\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lotto = range(45)\n",
+    "print(lotto)\n",
+    "\n",
+    "print(list(lotto)) # lotto 속에 어떤 데이터 있는지 모두 보여줌 >> 0부터 44까지 있음\n",
+    "\n",
+    "# 1부터 45까지의 숫자를 저장하고 싶다면?\n",
+    "lotto = range(1, 46)\n",
+    "print(lotto)\n",
+    "print(list(lotto))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "62c1907a-5233-418e-ba09-3eea22e3e831",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6, 8, 10, 12, 14, 16, 18]\n",
+      "[0, -2, -4, -6, -8, -10, -12, -14, -16, -18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "even = range(2, 20, 2) # 2~19 숫자 중 2씩 증가한 범위만 포함 >> 그래서 2~18까지 짝수만 출력됨\n",
+    "print(list(even))\n",
+    "\n",
+    "numbers = range(0, -20, -2) # -19~0 숫자 중 -2씩 감소한 범위만 포함 >> -18~0까지 짝수만 출력\n",
+    "print(list(numbers))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c887999-ef10-47e8-80b8-d617d1e1a19c",
+   "metadata": {},
+   "source": [
+    "## 4.4 string: 기본 데이터 구조 내용 참고"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38f27f8e-fe63-4be1-8d20-fbd32c685304",
+   "metadata": {},
+   "source": [
+    "## 4.5 시퀀스에서 활용 가능한 연산/함수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "6d276fb3-3dab-49d7-b492-86de15d9e09a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_list = ['a', 'b', 'c', 'd', 'e']\n",
+    "my_tuple = (6, 7, 8, 9, 10)\n",
+    "my_range = range(5)\n",
+    "my_string = '가나다라마'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "8cc1faf7-4177-4761-b374-44ec4375e4e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "6\n",
+      "0\n",
+      "가\n"
+     ]
+    }
+   ],
+   "source": [
+    "# indexing: 단일 데이터에 접근하는 방법\n",
+    "print(my_list[0])\n",
+    "print(my_tuple[0])\n",
+    "print(my_range[0])\n",
+    "print(my_string[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "6c483825-aeee-4b1d-9d13-1572e03e81b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b']\n",
+      "(6, 7)\n",
+      "range(0, 2)\n",
+      "가나\n"
+     ]
+    }
+   ],
+   "source": [
+    "#slicing: 일정 범위 데이터에 접근하는 방법\n",
+    "#var_name[index1:index2]\n",
+    "print(my_list[0:2]) #0번째부터 1번째까지의 데이터 출력됨\n",
+    "print(my_tuple[0:2])\n",
+    "print(my_range[0:2])\n",
+    "print(my_string[0:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "d0fe9866-e123-4196-a023-9e89981e5909",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['d', 'e']\n",
+      "['a', 'b', 'c']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#index 생략\n",
+    "print(my_list[3:]) # 뒤에 비워놓으면 자동으로 끝까지 출력함\n",
+    "print(my_list[:3]) # 맨 앞부터 특정 범위까지 자르는 것"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "76693268-2bab-4cc1-9c6d-b0a6a15fc1fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e\n",
+      "['c', 'd']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 음수 인텍스: 뒤에서부터 숫자를 세는 방식\n",
+    "print(my_list[-1]) # 뒤에서 첫 번째 데이터 출력\n",
+    "print(my_list[-3:-1]) # 뒤에서 1번째부터 2번째까지 출력\n",
+    "#음수 인덱스로 할 때 -1은 맨 뒤의 데이터 의미, 0으로 시작하는 게 아님"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "186ebc2a-f0d1-4665-88ea-548283e923ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'c', 'e']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# step: 특정 간격만큼만 출력할 때\n",
+    "print(my_list[::2]) # 맨 앞부터 2칸씩 증가한 범위만 출력"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "10efa550-6aa4-4403-a357-b9ea637b33f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# in: 모두 동일한 시퀸스에서 가능함\n",
+    "print(1 in my_list) # my_list에 1이라는 숫자 들어있는지 묻는 것\n",
+    "\n",
+    "# no in\n",
+    "print(1 not in my_list) # 1이라는 숫자가 my_list에 없는지 묻는 것"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "10dae716-2338-40d6-be7d-a8a8ddbc6813",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 'd', 'e', 1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# comcatennation(연결): 시퀸스형 자료는 전부 연결 가능함 >> 동일한 자료끼리만 연결 가능 >> 리스트+리스트, 튜플+튜플 등\n",
+    "print(my_list + [1, 2, 3, 4, 5]) # 리스트 2개 연결한 것"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "f07ce984-4c5d-4660-8322-f1f9d57b1b49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 'd', 'e', 'a', 'b', 'c', 'd', 'e']\n",
+      "가가가가가\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 곱셈(*)\n",
+    "print(my_list * 2) # 곱셈 사칙연산이 아닌, 2번 반복해달란 것 >> 곱셈이 아닌, 연결을 몇 번 할 것인지인 것\n",
+    "print('가' * 5)\n",
+    "print([0] * 10) # 0 들어있는 리스트를 10번 연결하는 것 >> 그러면 0 10개 들어 있는 리스트 만들어짐\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "ea728bb8-007c-4e8d-9ace-c4b612ae198b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a'"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(my_list) # 길이 출력해줌\n",
+    "max(my_list) # 가장 큰 수를 도출함 >> 문자도 가장 뒷 순서의 문자를 큰 수로 인식해 도출\n",
+    "min(my_list) # 가장 작은 값 출력"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33fab59c-8fed-4d1a-9d2d-79fdbc657528",
+   "metadata": {},
+   "source": [
+    "## 5. 시퀀스 이외 자료구조"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "9e15306e-da3b-4b4d-a59a-094eac47c861",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5}\n",
+      "{1, 3, 5, 7, 9}\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_set_a = {1, 2, 3, 4, 5}\n",
+    "my_set_b = {1, 3, 5, 7, 9}\n",
+    "\n",
+    "print(my_set_a)\n",
+    "print(my_set_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "c28d8c6a-5bbc-4ff9-bffe-ba80f227a843",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 4}\n",
+      "{1, 2, 3, 4, 5, 7, 9}\n",
+      "{1, 3, 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_set_a - my_set_b) #차집합\n",
+    "print(my_set_a | my_set_b) #합집합\n",
+    "print(my_set_a & my_set_b) #교집합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "3bdafd9c-389c-4ce5-aae7-992202cd9b1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'대구', '부산', '서울'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "location = ['서울', '대구', '대구', '부산', '서울', '대구', '부산']\n",
+    "print(set(location))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3672abab-07c0-49e1-985d-6c7b67a03e41",
+   "metadata": {},
+   "source": [
+    "## 5.2 사전"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "fb61380f-6e8a-4917-8a46-d8efd56f34d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "02\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dict = {'서울': '02', '경기': '031'} # 키를 기준으로만 접근 가능 >> 사전도 의미 기준으로 단어 찾으려면 찾기 힘들듯\n",
+    "print(my_dict['서울'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "092a04c8-23a4-4c5b-b404-25ec8c789cc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sori\n",
+      "git\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_info = {\n",
+    "    'name': 'sori',\n",
+    "    'location': 'seoul',\n",
+    "    'age': 25,\n",
+    "    'skill': ['python', 'git']}\n",
+    "# 리스트는 동일한 자료형을 입력하는 것을 가정, dirctionary는 서로 다른 자료형 입력 가능, 사전 안에 사전 넣을 수도 있음\n",
+    "print(my_info['name']) # dict의 name이라는 키의 value만 출력\n",
+    "print(my_info['skill'][1]) # dict 내에 list 포함돼 있을 때, list의 특정 범위만 도출하는 방법"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "44ff21f8-f0ec-433c-90a2-1d9094246fb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blood = "
+   ]
   }
  ],
  "metadata": {
