--- a/03_function.ipynb
+++ b/03_function.ipynb
@@ -58,7 +58,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "860dc509-2ba0-4834-87a5-8759dd86efa7",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -832,6 +834,304 @@
     "\n",
     "my_max(1,2,3,4,5,6,7)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "50b50b33-7393-4ff9-ba02-9487a64c5476",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'sori', 'age': 10}\n"
+     ]
+    }
+   ],
+   "source": [
+    "info = {\n",
+    "    'name': 'sori', 'age': 10}\n",
+    "print(info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "07496a55-ad2e-43af-84f5-6b809d14e331",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'park', 'a1ge': 25}\n"
+     ]
+    }
+   ],
+   "source": [
+    "info = dict(name = 'park', a1ge = 25) # dict() 함수 활용한 방법 | 근데 dict 함수: name, age라는 각 위치 인자 지정되지 않았는데 작동한 것 >> 이는 dict 함수 자체가 정의되지 않은 키워드 인자를 처리하도록 자동으로 설정돼 있기 때문에 작동 가능한 것\n",
+    "print(info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3b106d7-76e8-45c3-9748-43b26fdaced0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_dict(**kwargs):\n",
+    "    print(kwargs)\n",
+    "# dict 함수에는 키워드 형태의 파라미터 어떤 것이든 모두 넣을 수 있음\n",
+    "my_dict(asdf = '가나다', age = 123, test = 'asdf') # 내부적으로 어떤 파라미터 들어오든 이를 하나의 묶음으로 만들어 dictionary로 만들어줌, 리스트로 만들어주는 게 가변 인자 리스트, dict로 만들어주는 게 정의되지 않은 인자 처리 방식인 것"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b3d4689d-b316-476b-b114-3e99e3682446",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_func(params1, params2='temp', *numbers, **kwargs): # 위치인자, 가변인자 리스트, 정의되지 않은 키워드 인자 넣는 공간 복합적으로 만들 수 있음\n",
+    "    return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d32c5ff3-154c-4bf2-842a-e0725d88e30d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# my_func() -> params1 부족해서 실행 안 됨\n",
+    "\n",
+    "my_func(123) # 두번째 데이터 없으면 temp 나오도록 설정돼 있어서 작동\n",
+    "    #파람스1에는 123 들어가 있고, 2에는 temp 들어가 있는 상황\n",
+    "\n",
+    "my_func(123, 234) # params1 = 123, 2 = 234 들어 있는 것\n",
+    "my_func(123, 234, 345) # 345는 numbers에 들어가게 됨 / 근데 이후 들어오는 숫자는 모두 가변인자 리스트인 numbers에 들어가게 됨\n",
+    "my_func(123, 234, 345, 456, a = 1, b = 2, c = 3) # kwargs = {a:1, b:2, c:3}으로 키워드 인자 들어간 식"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "fa1b84ed-1082-4258-9cb9-a0185cf5e552",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 두 수 더하는 함수 만들기\n",
+    "# def my_sum(num1, num2):\n",
+    "    # return num1 + num2\n",
+    "\n",
+    "# my_sum(1, 2)\n",
+    "\n",
+    "# 람다 표현식으로 작성하기\n",
+    "    # my_sum + 소괄호 생략된 것 >> 람다 함수는 이름 없는 함수라 이름 지정 않은 것\n",
+    "    # return도 생략됨\n",
+    "(lambda num1, num2: num1 + num2)(1, 2)\n",
+    "# 장점: 빠름, 효율적 >> 함수 선언했단 거는 메모리에 저장한 것\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "00361fce-129d-45b0-af93-d3c034d13ea5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'str' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m123\u001b[39m \u001b[38;5;66;03m# 123이라는 데이터를 result 변수에 담아 출력한 것\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(result)\n\u001b[1;32m----> 4\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m123\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# 숫자 123이 문자열로 변환돼 출력됨\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(result)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mhello\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;66;03m# str이라는 변수 만들어서 문자 데이터 저장한 것\u001b[39;00m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'str' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "result = 123 # 123이라는 데이터를 result 변수에 담아 출력한 것\n",
+    "print(result)\n",
+    "\n",
+    "result = str(123) # 숫자 123이 문자열로 변환돼 출력됨\n",
+    "print(result)\n",
+    "# 여기에서는 빌트인 함수인 str()를 활용한 것\n",
+    "\n",
+    "str = 'hello' # str이라는 변수 만들어서 문자 데이터 저장한 것 >> 근데 그러면 에러 남\n",
+    "# 여기에서는 바로 위에서 만들어진 str 변수를 local 위치에서 찾아서 적용한 것\n",
+    "    # 같은 이름으로 여러 변수/함수 만들어질 수 있는데, 변수는 덮어쓰기 불가능(변수 안에 들어가는 데이터는 덮어쓰기 가능)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "9d6bc11f-bb36-4e7e-bd7a-cf7c560d86fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'str' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[25], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m \u001b[38;5;28;43mstr\u001b[39;49m \u001b[38;5;66;03m# 변수 강제로 삭제한 것\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'str' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "del str # 변수 강제로 삭제한 것"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "7548480e-da13-470a-9ff5-3c5a504ac6c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = 1 # a라는 이름 가진 상자에 숫자 1 넣은 것\n",
+    "def local_scope(a): # local_scope라는 함수 정의\n",
+    "    return a\n",
+    "a = '가나다라' # 함수 밖에서 안으로 들어갈 순 없으니, 이때 a는 a = 1의 a가 '가나다라'로 바뀐 것\n",
+    "local_scope('hello') # local_scope 함수 안으로 들어가, 가장 가까운 a에 'hello' 데이터 할당한 것"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "494566cc-0da6-4987-831c-6b827f33006c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [1,2,3,4,5]\n",
+    "for i in my_list:\n",
+    "    # i = ... -> i에 1, 2, 3, 각각 할당한 과정 생략돼 있음 >> 그래서 for 변수 밖에서 print(i)하면 5 2번 나오게 됨\n",
+    "    print(i)\n",
+    "\n",
+    "print(i) # "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "dc7ea443-166b-499c-a4a2-85241886b0ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 바깥의 a를 가져와 a에 1 더한 값 저장하려고 할 때\n",
+    "a = 0\n",
+    "def global_scope():\n",
+    "    global a # 함수 내부 연산을 할 때, 로컬 a가 아닌 함수 바깥의 글로벌 변수인 a를 쓰겠다고 파이썬에게 알려주는 것\n",
+    "    a = a + 1\n",
+    "    return a\n",
+    "\n",
+    "global_scope()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "67fc058b-cd3c-46c3-908d-30d1779f38b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3628800"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 재귀\n",
+    "def fact(n):\n",
+    "    if n == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return fact(n-1) * n\n",
+    "fact(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "347d8a14-9094-48d4-b639-d097f45a951c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
