--- a/04_data_structure.ipynb
+++ b/04_data_structure.ipynb
@@ -466,6 +466,413 @@
     "    # str 메소드는 원본 수정 안 됨 >> 그러니 원본 덮어쓰기 하는 것 \n",
     "print(word)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "83ac1e05-d6a3-45c0-8929-a4eab1287d9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dic 안에 또다른 dic, list 넣을 수 있음\n",
+    "info = {'name': 'sori',\n",
+    "       'location': 'seoul',\n",
+    "       'age': 25,\n",
+    "        'phone_book': {\n",
+    "            'kim': '010-1111-11111',\n",
+    "            'lee': '010-2222-2222'},\n",
+    "        'models': ['iphone', 'ipad']\n",
+    "       }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e5cda60c-e572-44b9-a74f-ccc380ea74ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sori\n",
+      "010-2222-2222\n",
+      "ipad\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(info['name'])\n",
+    "print(info['phone_book']['lee']) # dic 내부의 dic/list의 항목 접근할 때, 옆에 대괄호로 빼줘야 함\n",
+    "print(info['models'][1]) # 리스트는 인덱스로 접근해야 함"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6417ddeb-6478-43ec-9171-27fd3b469f91",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'SORI', 'location': 'seoul', 'age': 25, 'phone_book': {'kim': '010-1111-11111', 'lee': '010-2222-2222'}, 'models': ['iphone', 'ipad']}\n",
+      "{'name': 'sori', 'location': 'seoul', 'age': 25, 'phone_book': {'kim': '010-1111-11111', 'lee': '010-2222-2222'}, 'models': ['iphone', 'ipad']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "info['name'] = 'SORI'\n",
+    "print(info)\n",
+    "\n",
+    "info.update(name = 'sori')\n",
+    "print(info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "59459827-ab2d-4e07-ba8d-ce2aa8d41abb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'sori', 'age': 25, 'phone_book': {'kim': '010-1111-11111', 'lee': '010-2222-2222'}, 'models': ['iphone', 'ipad']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "info.pop('location')\n",
+    "print(info)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "62ee77c9-1312-4f84-9b77-17f26cd2127f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sori\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(info.get('name'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "58c8bef5-da0b-4567-b6f4-070df964b943",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'A': 3, 'B': 2, 'O': 3, 'AB': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#연습문제\n",
+    "\n",
+    "blood_type = ['A', 'O', 'A', 'A', 'B', 'B', 'AB', 'O', 'O']\n",
+    "\n",
+    "# 각 혈액형 몇명인지 dic 만들기\n",
+    "result = {\n",
+    "    'A': 0,\n",
+    "    'B': 0,\n",
+    "    'O': 0,\n",
+    "    'AB': 0\n",
+    "}\n",
+    "\n",
+    "for blood in blood_type:\n",
+    "    result[blood] += 1 #A값 들어오면, result에 갯수 추가하려는 것\n",
+    "    # result[blood] = result[blood] + 1\n",
+    "print(result)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "8afc557b-a6fe-4439-be56-912df7a668a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'서울': 2, '대전': 1, '부산': 1, '대구': 1, 'LA': 1, '파리': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 데이터 정해지지 않은 상태에서 dic 접근하기: 각 지역 몇 개인지 세기\n",
+    "locations = ['서울', '서울', '대전', '부산', '대구', 'LA', '파리']\n",
+    "\n",
+    "result = {} # 키값 모르니 일단 비워둠\n",
+    "\n",
+    "# 넣으려는 키가 현재 목록에 있는지 검사 >> 있으면 +1 하기, 없으면 새 지역 키 생성\n",
+    "\n",
+    "for location in locations:\n",
+    "    if location in result.keys(): # location이 result 목록에 있는지 확인하는 것\n",
+    "        result[location] += 1 # 기존 데이터에 있을 시 +1 하기\n",
+    "    else:\n",
+    "        result[location] = 1 # 새 키 만들어 1이라는 값 할당한 것\n",
+    "print(result)\n",
+    "\n",
+    "# 위 코드 대신 이렇게 작성할 수 있음\n",
+    "#for location in locations:\n",
+    "    #if result.get(location): # result 안에 for문을 통해 반복 입력된 location 있는지 확인\n",
+    "    ## 이 경우 새 데이터 몇 개 들어오든 사용 가능\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "07c26764-5ac4-480c-8ea1-f9530bbef342",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 1, 2: 8, 3: 27, 4: 64, 5: 125, 6: 216, 7: 343, 8: 512, 9: 729, 10: 1000}\n",
+      "{1: 1, 2: 8, 3: 27, 4: 64, 5: 125, 6: 216, 7: 343, 8: 512, 9: 729, 10: 1000}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#{1: 1, 2: 8, 3: 27... 10: 1000} key는 순차적으로 증가, value는 key의 세제곱 증가하는 dict 만든다면\n",
+    "\n",
+    "# 1. for 문 활용\n",
+    "result = {}\n",
+    "numbers = range(1, 11)\n",
+    "\n",
+    "for number in numbers: # result에 1-10까지 숫자 넣음\n",
+    "    result[number] = number ** 3 # 앞서 넣은 숫자를 키값으로 설정 >> 연산값을 키의 밸류로 할당\n",
+    "print(result)\n",
+    "\n",
+    "# 2. dict comprehension 활용\n",
+    "result = {number: number ** 3 for number in range(1, 11)} # for 왼쪽에 연산 코드 작성: (key: value) 작성해줘야 함\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "d372b79e-707e-4d4c-8e81-dc33c6816b7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'수원': 30, '부산': 0}\n",
+      "{'수원': 30, '부산': 0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 미세먼지 농도 30 이하 지역만 고르기\n",
+    "dust = {'서울': 50,\n",
+    "       '인천': 100,\n",
+    "       '수원': 30,\n",
+    "       '부산': 0}\n",
+    "\n",
+    "# 1. for문\n",
+    "\n",
+    "result = {}\n",
+    "for k, v in dust.items(): # dict에서 k, v 모두 출력하는 방식\n",
+    "    if v <= 30:\n",
+    "        result[k] = v\n",
+    "print(result)\n",
+    "\n",
+    "# 2. comprehension\n",
+    "result = {k: v for k, v in dust.items() if v <= 30}\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "e710bef1-ed2a-40ae-962f-498d2cd2ae09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'apple', 'banana', 'melon'}\n",
+      "{'apple', 'banana', 'melon', 'watermelon'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = {'apple', 'banana', 'melon'}\n",
+    "print(fruits)\n",
+    "\n",
+    "fruits.add('watermelon')\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "3f116189-be14-4c5a-8fe3-8cf1044b06c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '2', '3', '4', '5']\n",
+      "['1', '2', '3', '4', '5']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# numbers 리스트의 숫자를 일괄적으로 문자열로 바꾸기: ex. '1', '2'...\n",
+    "numbers = [1,2,3,4,5]\n",
+    "\n",
+    "# 1. for문\n",
+    "result = []\n",
+    "for num in numbers:\n",
+    "    result.append(str(num))\n",
+    "print(result)\n",
+    "\n",
+    "# 2. map()\n",
+    "result = map(str, numbers) # 어떤 함수 실행할 건지, 함수 이름만 적으면 됨 + 어떤 데이터에 해당 함수로 연산할 것인지 데이터 객체 적기\n",
+    "print(list(result)) # map 함수 실행하려면, result 리스트를 출력하는 명령어 입력해야, 그때 map 함수가 실행함"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "c244101d-2bdf-40ef-a55a-8aa983f3ab9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 8, 27, 64, 125]\n",
+      "[1, 8, 27, 64, 125]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 리스트 3제곱하기\n",
+    "# 1. for문\n",
+    "numbers = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "result = []\n",
+    "for number in numbers:\n",
+    "    result.append(number **3)\n",
+    "print(result)\n",
+    "\n",
+    "# 2. map\n",
+    "# 파이썬 기본 함수에 없는 연산 해야 한다면: 함수 직접 만들어 map에 넣기\n",
+    "\n",
+    "def cube(x):\n",
+    "    return x ** 3\n",
+    "\n",
+    "result = map(cube, numbers)\n",
+    "print(list(result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "01c978e4-1b7c-4c62-a459-180c8752b88c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_input = '1 3 5 7 9'\n",
+    "# 띄어쓰기 기준으로 나누기\n",
+    "test_input.split()\n",
+    "    # .split(): 띄어쓰기 기준으로 단어 쪼개줌\n",
+    "\n",
+    "# 각 글자를 숫자로 바꾸기\n",
+    "map(int, test_input.split())\n",
+    "\n",
+    "# 리스트에 저장하기\n",
+    "result = list(map(int, test_input.split()))\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "691967df-bdba-4c81-b2d0-057ed22c4960",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5]\n",
+      "[1, 3, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 홀수만 고르기\n",
+    "def is_odd(x):\n",
+    "    return x % 2\n",
+    "\n",
+    "# 1. for문\n",
+    "numbers = [1,2,3,4,5,6]\n",
+    "result = []\n",
+    "for number in numbers:\n",
+    "    if number % 2 ==1:\n",
+    "        result.append(number)\n",
+    "print(result)\n",
+    "\n",
+    "# 2. filter\n",
+    "result = filter(is_odd, numbers)\n",
+    "print(list(result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "3645da0a-2249-4a1b-8af5-46659cf5d082",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 100), (2, 200), (3, 300)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3]\n",
+    "b = [100,200,300]\n",
+    "\n",
+    "result = zip(a,b)\n",
+    "print(list(result))"
+   ]
   }
  ],
  "metadata": {
