--- a/08_movie_data.ipynb
+++ b/08_movie_data.ipynb
@@ -20,7 +20,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "7f103712-82c7-48f0-8633-7b160156ef50",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "import requests\n",
@@ -113,10 +117,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5692ba89-533f-44d1-b403-9bb032d08420",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://www.kobis.or.kr/kobisopenapi/webservice/rest/boxoffice/searchDailyBoxOfficeList.json?key=d24fbe6d6f5236839d912b6023adb345&targetDt=20240201&itemPerPage=10&multiMovieYn=&repNationCd=&wideAreaCd=\n"
+     ]
+    }
+   ],
    "source": [
     "daily_url = url_maker.daily_boxoffice_url('20240201')\n",
     "print(daily_url)"
@@ -124,10 +136,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f660dfbd-29cf-4abf-85bd-d1f7ca557636",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://www.kobis.or.kr/kobisopenapi/webservice/rest/boxoffice/searchWeeklyBoxOfficeList.json?key=d24fbe6d6f5236839d912b6023adb345&targetDt=20250201&weekGb=0&itemPerPage=10&multiMovieYn=&repNationCd=&wideAreaCd=\n"
+     ]
+    }
+   ],
    "source": [
     "weekly_url = url_maker.weekly_boxoffice_url('20250201')\n",
     "print(weekly_url)"
@@ -147,6 +167,44 @@
     "    - 감독 (첫 번째 감독)\n",
     "    - 주연 배우 (첫 번째, 두 번째 배우)\n",
     "    - 장르 (첫 번째 장르)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "33b13975-58c6-4872-aadb-681238b792f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_movie_detail(movie_cd):\n",
+    "    movie_info = url_maker.movie_info_url(movie_cd)\n",
+    "    info_dict = requests.get(movie_info).json()\n",
+    "    info = info_dict['movieInfoResult']['movieInfo']\n",
+    "\n",
+    "    print(f'{info['movieNm']} {info[('prdtYear')]}')\n",
+    "\n",
+    "# 쇼생크 탈출 (1994)\n",
+    "# 감독: 프랭크 다라본트\n",
+    "# 주연: 팀 로빈스, 모건 프리먼\n",
+    "# 장르: 드라마"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "9c721d16-c347-4aca-8adf-fa20162785e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "쇼생크 탈출 1994\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_movie_detail('19950084')"
    ]
   },
   {
@@ -179,6 +237,7 @@
     "    movie_info = url_maker.movie_info_url(movie_cd) # 상세정보 출력 링크 만들기\n",
     "    r = requests.get(movie_info).json()\n",
     "    \n",
+    "    \n",
     "    t = r[movieInfoRes][movieInfo][movieNm][0]\n",
     "    y = r[movieInfoResult][movieInfo][prdtYear][0]\n",
     "    #d = r[movieInfoResult][movieInfo][directors][peopleNm]\n",
@@ -193,10 +252,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "4b257993-df34-4a45-b964-6676b8404b4f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'movieInfoResult' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[21], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mget_movie_detail\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m19950084\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[20], line 4\u001b[0m, in \u001b[0;36mget_movie_detail\u001b[1;34m(movie_cd)\u001b[0m\n\u001b[0;32m      2\u001b[0m movie_info \u001b[38;5;241m=\u001b[39m url_maker\u001b[38;5;241m.\u001b[39mmovie_info_url(movie_cd)\n\u001b[0;32m      3\u001b[0m info_dict \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(movie_info)\u001b[38;5;241m.\u001b[39mjson()\n\u001b[1;32m----> 4\u001b[0m info_dict[\u001b[43mmovieInfoResult\u001b[49m]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'movieInfoResult' is not defined"
+     ]
+    }
+   ],
    "source": [
     "get_movie_detail('19950084')"
    ]
@@ -242,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "84d88dce-932b-473b-9d85-a1622dca8beb",
    "metadata": {},
    "outputs": [],
@@ -257,16 +329,36 @@
     "            if k in ['movieNm', 'rank', 'audiCnt']:\n",
     "                for i, j in k.items():\n",
     "                    return j\n",
-    "            print(f'{'rank'}위: {'movieNm'} ({'audiCnt'}명)')\n",
+    "            print(f'{rank}위: {movieNm'} ({'audiCnt'}명)')\n",
     "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "33bd45c9-222e-4be6-a70c-d2d33f5845a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rank위: movieNm (audiCnt명)\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'items'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mget_daily_boxoffice\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m20250201\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# YYYYMMDD 형식으로 날짜 입력\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[6], line 9\u001b[0m, in \u001b[0;36mget_daily_boxoffice\u001b[1;34m(target_date)\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m movie\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmovieNm\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrank\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124maudiCnt\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[1;32m----> 9\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m i, j \u001b[38;5;129;01min\u001b[39;00m \u001b[43mk\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitems\u001b[49m():\n\u001b[0;32m     10\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m j\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrank\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m위: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmovieNm\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124maudiCnt\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m명)\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'items'"
+     ]
+    }
+   ],
    "source": [
     "get_daily_boxoffice(\"20250201\")  # YYYYMMDD 형식으로 날짜 입력"
    ]
@@ -320,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e9cde271-d38f-4d0d-818d-e33fca0b070a",
    "metadata": {},
    "outputs": [],
@@ -339,10 +431,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f09e49e9-9e4a-404b-8034-b8cc664cbc8a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2025-02-01 한국 영화 박스오피스 (개봉일 순)\n",
+      "{'rnum': '1', 'rank': '1', 'rankInten': '0', 'rankOldAndNew': 'OLD', 'movieCd': '20233006', 'movieNm': '히트맨2', 'openDt': '2025-01-22', 'salesAmt': '1663433100', 'salesShare': '39.5', 'salesInten': '525167660', 'salesChange': '46.1', 'salesAcc': '17240257840', 'audiCnt': '177129', 'audiInten': '40686', 'audiChange': '29.8', 'audiAcc': '1831557', 'scrnCnt': '1495', 'showCnt': '6165'}\n",
+      "{'rnum': '2', 'rank': '2', 'rankInten': '0', 'rankOldAndNew': 'OLD', 'movieCd': '20247450', 'movieNm': '검은 수녀들', 'openDt': '2025-01-24', 'salesAmt': '934872220', 'salesShare': '22.2', 'salesInten': '247202440', 'salesChange': '35.9', 'salesAcc': '13206216740', 'audiCnt': '96043', 'audiInten': '14734', 'audiChange': '18.1', 'audiAcc': '1363840', 'scrnCnt': '1192', 'showCnt': '4387'}\n",
+      "{'rnum': '3', 'rank': '3', 'rankInten': '0', 'rankOldAndNew': 'OLD', 'movieCd': '20223819', 'movieNm': '말할 수 없는 비밀', 'openDt': '2025-01-27', 'salesAmt': '612619860', 'salesShare': '14.6', 'salesInten': '255290400', 'salesChange': '71.4', 'salesAcc': '2831121780', 'audiCnt': '63000', 'audiInten': '19506', 'audiChange': '44.8', 'audiAcc': '298293', 'scrnCnt': '846', 'showCnt': '2521'}\n",
+      "{'rnum': '4', 'rank': '4', 'rankInten': '0', 'rankOldAndNew': 'OLD', 'movieCd': '20228796', 'movieNm': '하얼빈', 'openDt': '2024-12-24', 'salesAmt': '221288880', 'salesShare': '5.3', 'salesInten': '34724080', 'salesChange': '18.6', 'salesAcc': '46361411980', 'audiCnt': '23298', 'audiInten': '1383', 'audiChange': '6.3', 'audiAcc': '4847097', 'scrnCnt': '711', 'showCnt': '1390'}\n",
+      "{'rnum': '5', 'rank': '5', 'rankInten': '0', 'rankOldAndNew': 'OLD', 'movieCd': '20244762', 'movieNm': '서브스턴스', 'openDt': '2024-12-11', 'salesAmt': '148098060', 'salesShare': '3.5', 'salesInten': '54128160', 'salesChange': '57.6', 'salesAcc': '3587624760', 'audiCnt': '15031', 'audiInten': '3589', 'audiChange': '31.4', 'audiAcc': '368343', 'scrnCnt': '283', 'showCnt': '433'}\n",
+      "{'rnum': '6', 'rank': '6', 'rankInten': '0', 'rankOldAndNew': 'OLD', 'movieCd': '20051060', 'movieNm': '극장판 포켓몬스터 AG: 뮤와 파동의 용사 루카리오', 'openDt': '2025-01-22', 'salesAmt': '108039420', 'salesShare': '2.6', 'salesInten': '52414900', 'salesChange': '94.2', 'salesAcc': '1196326460', 'audiCnt': '12342', 'audiInten': '5892', 'audiChange': '91.3', 'audiAcc': '134957', 'scrnCnt': '538', 'showCnt': '837'}\n",
+      "{'rnum': '7', 'rank': '7', 'rankInten': '1', 'rankOldAndNew': 'OLD', 'movieCd': '20246361', 'movieNm': '뽀로로 극장판 바닷속 대모험', 'openDt': '2025-01-01', 'salesAmt': '53373900', 'salesShare': '1.3', 'salesInten': '32139000', 'salesChange': '151.3', 'salesAcc': '3295806970', 'audiCnt': '5903', 'audiInten': '3430', 'audiChange': '138.7', 'audiAcc': '382497', 'scrnCnt': '299', 'showCnt': '343'}\n",
+      "{'rnum': '8', 'rank': '8', 'rankInten': '5', 'rankOldAndNew': 'OLD', 'movieCd': '20240855', 'movieNm': '바다 탐험대 옥토넛 어보브 앤 비욘드 : 극지방 대작전', 'openDt': '2025-01-27', 'salesAmt': '42966600', 'salesShare': '1.0', 'salesInten': '27834900', 'salesChange': '184', 'salesAcc': '248705100', 'audiCnt': '4570', 'audiInten': '2905', 'audiChange': '174.5', 'audiAcc': '26386', 'scrnCnt': '204', 'showCnt': '357'}\n",
+      "{'rnum': '9', 'rank': '9', 'rankInten': '1', 'rankOldAndNew': 'OLD', 'movieCd': '20245977', 'movieNm': '극장판 짱구는 못말려: 우리들의 공룡일기', 'openDt': '2024-12-18', 'salesAmt': '35361920', 'salesShare': '0.8', 'salesInten': '16896620', 'salesChange': '91.5', 'salesAcc': '7364269060', 'audiCnt': '3801', 'audiInten': '1692', 'audiChange': '80.2', 'audiAcc': '782887', 'scrnCnt': '173', 'showCnt': '205'}\n",
+      "{'rnum': '10', 'rank': '10', 'rankInten': '-3', 'rankOldAndNew': 'OLD', 'movieCd': '20241110', 'movieNm': '아이유 콘서트 : 더 위닝', 'openDt': '2025-01-24', 'salesAmt': '85348500', 'salesShare': '2.0', 'salesInten': '14361000', 'salesChange': '20.2', 'salesAcc': '1360798000', 'audiCnt': '3156', 'audiInten': '525', 'audiChange': '20', 'audiAcc': '49561', 'scrnCnt': '113', 'showCnt': '316'}\n"
+     ]
+    }
+   ],
    "source": [
     "get_movie_details(\"20250201\")  # YYYYMMDD 형식으로 날짜 입력"
    ]
@@ -398,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "2502eac6-0e64-4e8c-ac02-3c832287eee0",
    "metadata": {},
    "outputs": [],
@@ -422,15 +532,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "584d68bf-22bc-4227-b566-542fd1e0f678",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'faultInfo': {'message': '날싸형식에 맞게 입력하십시요.(YYYYMMDD)[parameterName=targetDt,parameterValue=2025]', 'errorCode': '320103'}}\n"
+     "ename": "KeyError",
+     "evalue": "'boxOfficeResult'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[11], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mget_weekly_boxoffice\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2025\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[10], line 4\u001b[0m, in \u001b[0;36mget_weekly_boxoffice\u001b[1;34m(target_date)\u001b[0m\n\u001b[0;32m      2\u001b[0m weekly_boxoffice \u001b[38;5;241m=\u001b[39m url_maker\u001b[38;5;241m.\u001b[39mweekly_boxoffice_url(target_date)\n\u001b[0;32m      3\u001b[0m r \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(weekly_boxoffice)\u001b[38;5;241m.\u001b[39mjson()\n\u001b[1;32m----> 4\u001b[0m movies \u001b[38;5;241m=\u001b[39m \u001b[43mr\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mboxOfficeResult\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mweeklyBoxOfficeList\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m movie \u001b[38;5;129;01min\u001b[39;00m movies:\n\u001b[0;32m      7\u001b[0m     movie_name \u001b[38;5;241m=\u001b[39m movie\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmovieNm\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'boxOfficeResult'"
      ]
     }
    ],
