--- a/08_movie_data.ipynb
+++ b/08_movie_data.ipynb
@@ -18,13 +18,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "7f103712-82c7-48f0-8633-7b160156ef50",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
@@ -171,18 +167,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "id": "33b13975-58c6-4872-aadb-681238b792f6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 복습 완료!\n",
     "def get_movie_detail(movie_cd):\n",
     "    movie_info = url_maker.movie_info_url(movie_cd)\n",
     "    info_dict = requests.get(movie_info).json()\n",
     "    info = info_dict['movieInfoResult']['movieInfo']\n",
     "\n",
-    "    print(f'{info['movieNm']} {info[('prdtYear')]}')\n",
-    "\n",
+    "    print(f'{info['movieNm']} ({info['prdtYear']})')\n",
+    "    print(f'감독: {info['directors'][0]['peopleNm']}')\n",
+    "    print(f'주연: {info['actors'][0]['peopleNm']}, {info['actors'][1]['peopleNm']}')\n",
+    "    print(f'장르: {info['genres'][0]['genreNm']}')\n",
+    "    \n",
     "# 쇼생크 탈출 (1994)\n",
     "# 감독: 프랭크 다라본트\n",
     "# 주연: 팀 로빈스, 모건 프리먼\n",
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "id": "9c721d16-c347-4aca-8adf-fa20162785e4",
    "metadata": {},
    "outputs": [
@@ -199,73 +199,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "쇼생크 탈출 1994\n"
-     ]
-    }
-   ],
-   "source": [
-    "get_movie_detail('19950084')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d37950ad-45a9-4c24-a4fd-1e5ef7e7563b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 상세정보 출력하는 함수\n",
-    "def get_movie_detail(movie_cd):\n",
-    "    movie_info = url_maker.movie_info_url(movie_cd) # 상세정보 출력 링크 만들기\n",
-    "    r = requests.get(movie_info).json() # 상세정보 링크 내용을 r 변수에 저장 >> 이후 json을 dict으로 전환\n",
-    "\n",
-    "    list = []\n",
-    "    name = ['movieNm', 'directors', 'actors', 'genreNm']\n",
-    "    \n",
-    "    r_2 = r[movieInfoResult][movieInfo]\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8779f864-d0fa-40af-8115-f2bbe2ebceb1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_movie_detail(movie_cd):\n",
-    "    movie_info = url_maker.movie_info_url(movie_cd) # 상세정보 출력 링크 만들기\n",
-    "    r = requests.get(movie_info).json()\n",
-    "    \n",
-    "    \n",
-    "    t = r[movieInfoRes][movieInfo][movieNm][0]\n",
-    "    y = r[movieInfoResult][movieInfo][prdtYear][0]\n",
-    "    #d = r[movieInfoResult][movieInfo][directors][peopleNm]\n",
-    "    #a = r[movieInfoResult][movieInfo][peopleNm]\n",
-    "    g = r[movieInfoResult][movieInfo][genreNm][0]\n",
-    "    \n",
-    "    print(t)\n",
-    "\n",
-    "\n",
-    "get_movie_detail('19950084')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "4b257993-df34-4a45-b964-6676b8404b4f",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'movieInfoResult' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[21], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mget_movie_detail\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m19950084\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[20], line 4\u001b[0m, in \u001b[0;36mget_movie_detail\u001b[1;34m(movie_cd)\u001b[0m\n\u001b[0;32m      2\u001b[0m movie_info \u001b[38;5;241m=\u001b[39m url_maker\u001b[38;5;241m.\u001b[39mmovie_info_url(movie_cd)\n\u001b[0;32m      3\u001b[0m info_dict \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(movie_info)\u001b[38;5;241m.\u001b[39mjson()\n\u001b[1;32m----> 4\u001b[0m info_dict[\u001b[43mmovieInfoResult\u001b[49m]\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'movieInfoResult' is not defined"
+      "쇼생크 탈출 (1994)\n",
+      "감독: 프랭크 다라본트\n",
+      "주연: 팀 로빈스, 모건 프리먼\n",
+      "장르: 드라마\n"
      ]
     }
    ],
@@ -314,6 +251,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "id": "b42ac116-e4c6-47a8-9fd2-032d9e6f81c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 복습\n",
+    "# 기본작업: 일별 박스오피스 url 가져오기 >> url 내용 다운 받기 >> json을 dict으로 바꾸기 >> 폴더 열기\n",
+    "    # api 키를 활용해서 가져오는 것이라서 url_maker 활용하는 거 >> 여기에 api 키 넣어놨기 때문\n",
+    "\n",
+    "def get_daily_boxoffice(target_date):\n",
+    "    daily_boxoffice = url_maker.daily_boxoffice_url(target_date)\n",
+    "    r = requests.get(daily_boxoffice).json()\n",
+    "    movies = r['boxOfficeResult']['dailyBoxOfficeList']\n",
+    "\n",
+    "    print('20250201 박스오피스 TOP 10')\n",
+    "    for movie in movies:\n",
+    "        movieNm = movie['movieNm']\n",
+    "        audiCnt = movie['audiCnt']\n",
+    "        rank = movie['rank']\n",
+    "        print(f'{rank}위: {movieNm} ({audiCnt}명)')\n",
+    "\n",
+    "        # 여러 영화 들어 있는 movies 속에서 개별 영화 dict을 반복문에 넣음 -> 근데 dict 폴더 아직 안 열은 셈 -> 그래서 개별 movie['key_name']으로 폴더 열어주기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "a56123ac-db9a-4efa-9fda-c58d2b4519d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20250201 박스오피스 TOP 10\n",
+      "1위: 히트맨2 (177129명)\n",
+      "2위: 검은 수녀들 (96043명)\n",
+      "3위: 말할 수 없는 비밀 (63000명)\n",
+      "4위: 하얼빈 (23298명)\n",
+      "5위: 서브스턴스 (15031명)\n",
+      "6위: 극장판 포켓몬스터 AG: 뮤와 파동의 용사 루카리오 (12342명)\n",
+      "7위: 뽀로로 극장판 바닷속 대모험 (5903명)\n",
+      "8위: 바다 탐험대 옥토넛 어보브 앤 비욘드 : 극지방 대작전 (4570명)\n",
+      "9위: 극장판 짱구는 못말려: 우리들의 공룡일기 (3801명)\n",
+      "10위: 아이유 콘서트 : 더 위닝 (3156명)\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_daily_boxoffice(\"20250201\")  # YYYYMMDD 형식으로 날짜 입력\n",
+    "# 20250201 박스오피스 TOP 10\n",
+    "# 1위: 히트맨2 (177129명)\n",
+    "# 2위: 검은 수녀들 (96043명)\n",
+    "# 3위: 말할 수 없는 비밀 (63000명)\n",
+    "# 4위: 하얼빈 (23298명)\n",
+    "# 5위: 서브스턴스 (15031명)\n",
+    "# 6위: 극장판 포켓몬스터 AG: 뮤와 파동의 용사 루카리오 (12342명)\n",
+    "# 7위: 뽀로로 극장판 바닷속 대모험 (5903명)\n",
+    "# 8위: 바다 탐험대 옥토넛 어보브 앤 비욘드 : 극지방 대작전 (4570명)\n",
+    "# 9위: 극장판 짱구는 못말려: 우리들의 공룡일기 (3801명)\n",
+    "# 10위: 아이유 콘서트 : 더 위닝 (3156명)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "84d88dce-932b-473b-9d85-a1622dca8beb",
    "metadata": {},
@@ -340,22 +342,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rank위: movieNm (audiCnt명)\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'items'",
+     "ename": "NameError",
+     "evalue": "name 'get_daily_boxoffice' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mget_daily_boxoffice\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m20250201\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# YYYYMMDD 형식으로 날짜 입력\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[6], line 9\u001b[0m, in \u001b[0;36mget_daily_boxoffice\u001b[1;34m(target_date)\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m movie\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m k \u001b[38;5;129;01min\u001b[39;00m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmovieNm\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrank\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124maudiCnt\u001b[39m\u001b[38;5;124m'\u001b[39m]:\n\u001b[1;32m----> 9\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m i, j \u001b[38;5;129;01min\u001b[39;00m \u001b[43mk\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mitems\u001b[49m():\n\u001b[0;32m     10\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m j\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrank\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m위: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmovieNm\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124maudiCnt\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m명)\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'items'"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mget_daily_boxoffice\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m20250201\u001b[39m\u001b[38;5;124m\"\u001b[39m)  \u001b[38;5;66;03m# YYYYMMDD 형식으로 날짜 입력\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# 20250201 박스오피스 TOP 10\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# 1위: 히트맨2 (177129명)\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# 2위: 검은 수녀들 (96043명)\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# 9위: 극장판 짱구는 못말려: 우리들의 공룡일기 (3801명)\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;66;03m# 10위: 아이유 콘서트 : 더 위닝 (3156명)\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'get_daily_boxoffice' is not defined"
      ]
     }
    ],
@@ -371,9 +365,7 @@
    "outputs": [],
    "source": [
     "daily_url = url_maker.daily_boxoffice_url('20250201')\n",
-    "print(daily_url)\n",
-    "\n",
-    "\n"
+    "print(daily_url)"
    ]
   },
   {
@@ -408,6 +400,67 @@
     "- 입력받은 날짜(YYYYMMDD 형식)의 한국 영화 박스오피스 정보를 조회합니다.\n",
     "- 한국 영화만 조회하기 위해 repNationCd='K' 파라미터를 사용합니다.\n",
     "- 영화가 개봉한 순서대로 정렬하여 제목, 날짜, 순위를 출력합니다.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "f3a7952b-9c71-402d-bf39-d4bdbc64ee75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 복습\n",
+    "def get_movie_details(target_date):\n",
+    "    daily_boxoffice = url_maker.daily_boxoffice_url(target_date, repNationCd='K')\n",
+    "    r = requests.get(daily_boxoffice).json()\n",
+    "    movies = r['boxOfficeResult']['dailyBoxOfficeList']\n",
+    "    # print(movies)\n",
+    "    \n",
+    "    print('20250201 한국 영화 박스오피스 (개봉일 순)')\n",
+    "    \n",
+    "    l = []\n",
+    "    for movie in movies:\n",
+    "        l.append({movie['movieNm'], movie['openDt'], movie['rank']})\n",
+    "    print(l)\n",
+    "    sorted_l = l.sort(['openDt'])\n",
+    "    print(sorted_l)\n",
+    "\n",
+    "    \n",
+    "    #     movieNm = movie['movieNm']\n",
+    "    #     openDt = movie['openDt']\n",
+    "    #     rank = movie['rank']\n",
+    "\n",
+    "    #     result = print(f'{movieNm} ({openDt}) - {rank}위')\n",
+    "    #     return result.sort(openDt)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "23fa5383-2d1d-4052-a21d-efbf3a86811f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'rnum': '1', 'rank': '1', 'rankInten': '0', 'rankOldAndNew': 'OLD', 'movieCd': '20233006', 'movieNm': '히트맨2', 'openDt': '2025-01-22', 'salesAmt': '1663433100', 'salesShare': '46.0', 'salesInten': '525167660', 'salesChange': '46.1', 'salesAcc': '17240257840', 'audiCnt': '177129', 'audiInten': '40686', 'audiChange': '29.8', 'audiAcc': '1831557', 'scrnCnt': '1495', 'showCnt': '6165'}, {'rnum': '2', 'rank': '2', 'rankInten': '0', 'rankOldAndNew': 'OLD', 'movieCd': '20247450', 'movieNm': '검은 수녀들', 'openDt': '2025-01-24', 'salesAmt': '934872220', 'salesShare': '25.8', 'salesInten': '247202440', 'salesChange': '35.9', 'salesAcc': '13206216740', 'audiCnt': '96043', 'audiInten': '14734', 'audiChange': '18.1', 'audiAcc': '1363840', 'scrnCnt': '1192', 'showCnt': '4387'}, {'rnum': '3', 'rank': '3', 'rankInten': '0', 'rankOldAndNew': 'OLD', 'movieCd': '20223819', 'movieNm': '말할 수 없는 비밀', 'openDt': '2025-01-27', 'salesAmt': '612619860', 'salesShare': '16.9', 'salesInten': '255290400', 'salesChange': '71.4', 'salesAcc': '2831121780', 'audiCnt': '63000', 'audiInten': '19506', 'audiChange': '44.8', 'audiAcc': '298293', 'scrnCnt': '846', 'showCnt': '2521'}, {'rnum': '4', 'rank': '4', 'rankInten': '0', 'rankOldAndNew': 'OLD', 'movieCd': '20228796', 'movieNm': '하얼빈', 'openDt': '2024-12-24', 'salesAmt': '221288880', 'salesShare': '6.1', 'salesInten': '34724080', 'salesChange': '18.6', 'salesAcc': '46361411980', 'audiCnt': '23298', 'audiInten': '1383', 'audiChange': '6.3', 'audiAcc': '4847097', 'scrnCnt': '711', 'showCnt': '1390'}, {'rnum': '5', 'rank': '5', 'rankInten': '1', 'rankOldAndNew': 'OLD', 'movieCd': '20246361', 'movieNm': '뽀로로 극장판 바닷속 대모험', 'openDt': '2025-01-01', 'salesAmt': '53373900', 'salesShare': '1.5', 'salesInten': '32139000', 'salesChange': '151.3', 'salesAcc': '3295806970', 'audiCnt': '5903', 'audiInten': '3430', 'audiChange': '138.7', 'audiAcc': '382497', 'scrnCnt': '299', 'showCnt': '343'}, {'rnum': '6', 'rank': '6', 'rankInten': '-1', 'rankOldAndNew': 'OLD', 'movieCd': '20241110', 'movieNm': '아이유 콘서트 : 더 위닝', 'openDt': '2025-01-24', 'salesAmt': '85348500', 'salesShare': '2.4', 'salesInten': '14361000', 'salesChange': '20.2', 'salesAcc': '1360798000', 'audiCnt': '3156', 'audiInten': '525', 'audiChange': '20', 'audiAcc': '49561', 'scrnCnt': '113', 'showCnt': '316'}, {'rnum': '7', 'rank': '7', 'rankInten': '0', 'rankOldAndNew': 'OLD', 'movieCd': '20224303', 'movieNm': '귀신경찰', 'openDt': '2025-01-24', 'salesAmt': '15917100', 'salesShare': '0.4', 'salesInten': '3800980', 'salesChange': '31.4', 'salesAcc': '406114500', 'audiCnt': '1860', 'audiInten': '371', 'audiChange': '24.9', 'audiAcc': '45716', 'scrnCnt': '160', 'showCnt': '205'}, {'rnum': '8', 'rank': '8', 'rankInten': '0', 'rankOldAndNew': 'OLD', 'movieCd': '20200142', 'movieNm': '소방관', 'openDt': '2024-12-04', 'salesAmt': '13955700', 'salesShare': '0.4', 'salesInten': '2822700', 'salesChange': '25.4', 'salesAcc': '36260079370', 'audiCnt': '1418', 'audiInten': '101', 'audiChange': '7.7', 'audiAcc': '3852421', 'scrnCnt': '134', 'showCnt': '157'}, {'rnum': '9', 'rank': '9', 'rankInten': '0', 'rankOldAndNew': 'OLD', 'movieCd': '20110279', 'movieNm': '마당을 나온 암탉', 'openDt': '2011-07-28', 'salesAmt': '8933860', 'salesShare': '0.2', 'salesInten': '3591660', 'salesChange': '67.2', 'salesAcc': '14792455497', 'audiCnt': '1038', 'audiInten': '394', 'audiChange': '61.2', 'audiAcc': '2216721', 'scrnCnt': '109', 'showCnt': '131'}, {'rnum': '10', 'rank': '10', 'rankInten': '4', 'rankOldAndNew': 'OLD', 'movieCd': '20252147', 'movieNm': '뜻밖의 순간 : 언익스펙티드 저니', 'openDt': ' ', 'salesAmt': '723000', 'salesShare': '0.0', 'salesInten': '438000', 'salesChange': '153.7', 'salesAcc': '9732000', 'audiCnt': '241', 'audiInten': '146', 'audiChange': '153.7', 'audiAcc': '3244', 'scrnCnt': '1', 'showCnt': '2'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_movie_details(\"20250201\")  # YYYYMMDD 형식으로 날짜 입력\n",
+    "# 20250201 한국 영화 박스오피스 (개봉일 순)\n",
+    "# 뜻밖의 순간 : 언익스펙티드 저니 ( ) - 10위\n",
+    "# 마당을 나온 암탉 (2011-07-28) - 9위\n",
+    "# 소방관 (2024-12-04) - 8위\n",
+    "# 하얼빈 (2024-12-24) - 4위\n",
+    "# 뽀로로 극장판 바닷속 대모험 (2025-01-01) - 5위\n",
+    "# 히트맨2 (2025-01-22) - 1위\n",
+    "# 검은 수녀들 (2025-01-24) - 2위\n",
+    "# 아이유 콘서트 : 더 위닝 (2025-01-24) - 6위\n",
+    "# 귀신경찰 (2025-01-24) - 7위\n",
+    "# 말할 수 없는 비밀 (2025-01-27) - 3위"
    ]
   },
   {
